--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.1
+  percent_indicator: ^2.1.7+2
+  flutter_phoenix: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,7 +35,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
