--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.13.1
   percent_indicator: ^2.1.7+2
   flutter_phoenix: ^1.0.0
+  google_fonts: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
